--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "component": "node ./cli/component.mjs"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
+    "@prisma/client": "^3.9.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "prisma": "^3.9.1",
     "typescript": "4.5.5"
   }
 }
